--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,29 @@
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 #root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 1rem;
   text-align: center;
+}
+
+footer {
+  background-color: white;
+  border-top: 1px solid #e5e7eb;
+  text-align: center;
+  padding: 0.5rem 1rem;
+  font-size: 0.875rem;
 }
 
 .logo {
@@ -11,9 +32,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
